--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 .bashrc
 *.ipynb_checkpoints*
 *__pycache__*
-*dask_out.txt
-*notebooks/2017*
-2017*
+
+notebooks/2017*
+vh_combine/2017*
+/2017*
+
 dask-report*
+*.out
